--- a/tex/johdanto.tex
+++ b/tex/johdanto.tex
@@ -1,6 +1,6 @@
-Vuonna 1882 New Yorkissa käynnistettiin Pearl Street Stationin voimalaitos, joka käynnistyessään tuotti sähköä 85 asiakkaalle, ja vuoden päästä käynnistymisestä sillä oli jo 513 asiakasta \parencite{pearlStreetStation}. Tämä voimalaitos loi pohjan keskitetylle energiantuotannolle ja säh-köverkkojen kehitykselle.
+Vuonna 1882 New Yorkissa käynnistettiin Pearl Street Stationin voimalaitos, joka käynnistyessään tuotti sähköä 85 asiakkaalle, ja vuoden päästä käynnistymisestä sillä oli jo 513 asiakasta \parencite{pearlStreetStation}. Tämä voimalaitos loi pohjan keskitetylle energiantuotannolle ja sähköverkkojen kehitykselle.
 
-Nykyiset sähköverkot ovat pääosin suunniteltu keskitetyn energiantuotannon tarpeisiin, mutta uusiutuvien energialähteiden osuus kasvaa yhteiskunnassa jatkuvasti ja hajautu-neen energiantuotannon lisääntyessä älykkään verkon merkitys kasvaa. Vuodesta 2008 lähtien julkaisujen, joiden abstraktissa, otsikossa tai avainsanoissa mainitaan ”Smart Grid”, määrä on kasvanut huomattavasti Science Direct -julkaisualustalla. \parencite{Tuballa&Abundo}
+Nykyiset sähköverkot ovat pääosin suunniteltu keskitetyn energiantuotannon tarpeisiin, mutta uusiutuvien energialähteiden osuus kasvaa yhteiskunnassa jatkuvasti ja hajautuneen energiantuotannon lisääntyessä älykkään verkon merkitys kasvaa. Vuodesta 2008 lähtien julkaisujen, joiden abstraktissa, otsikossa tai avainsanoissa mainitaan ”Smart Grid”, määrä on kasvanut huomattavasti Science Direct -julkaisualustalla. \parencite{Tuballa&Abundo}
 
 Electric Power Research Institute (EPRI) määrittelee älykkään sähköverkon siten, että se sisällyttää tieto- ja kommunikaatioteknologiaa sähköntuotannon, -jakelun ja -kulutuksen eri osa-alueisiin. Sen tavoitteena on minimoida ympäristövaikutuksia, parantaa luotettavuutta ja palvelua, vahvistaa markkinoita sekä vähentää kustannuksia ja parantaa tehokkuutta. Käytännössä tämä tarkoittaa kahdensuuntaista kommunikaatiota kuluttajalta verkonhaltijalle, mutta myös verkonhaltijalta kuluttajalle, esimerkiksi etäohjauksen muodossa. \parencite{SGdefinition}
 
@@ -14,4 +14,4 @@ Lämpöpumppuja ja aurinkosähköinverttereitä on siis mahdollista käyttää o
 
 Tämän työn tarkoitus on tutkia, millaisia rajapintoja lämpöpumpuilla ja aurinkosähköjärjestelmillä on, millaisia sidosryhmät ja niiden tarpeet ovat. Lisäksi työn tarkoitus on erityisesti vastata kysymykseen, mihin rajapintoja voidaan hyödyntää ja millaisia sovelluksia ne mahdollistavat.
 
-Tässä työssä tarkastellaan aurinkosähköjärjestelmän ja sähkökäyttöisten lämpöpumppujen komponentteja ja toimintaa yleisellä tasolla järjestelmien ymmärtämiseksi. Tämän jälkeen perehdytään järjestelmien kommunikaatiorajapintoihin, niiden toimintaan ja niitä määrittäviin standardeihin. Lisäksi tarkastellaan rajapintojen hyödyntämismahdollisuuksia eri sovelluksissa ja eri sidosryhmien näkökulmasta. Sidosryhmien osalta työssä käsitellään Suomessa sijaitsevien järjestelmien kannalta relevantteja sidosryhmiä. Työssä ei ole tarkoitus käydä läpi sähköverkon ulko-puolella olevia ”off-grid” -järjestelmiä.
+Tässä työssä tarkastellaan aurinkosähköjärjestelmän ja sähkökäyttöisten lämpöpumppujen komponentteja ja toimintaa yleisellä tasolla järjestelmien ymmärtämiseksi. Tämän jälkeen perehdytään järjestelmien kommunikaatiorajapintoihin, niiden toimintaan ja niitä määrittäviin standardeihin. Lisäksi tarkastellaan rajapintojen hyödyntämismahdollisuuksia eri sovelluksissa ja eri sidosryhmien näkökulmasta. Sidosryhmien osalta työssä käsitellään Suomessa sijaitsevien järjestelmien kannalta relevantteja sidosryhmiä. Työssä ei ole tarkoitus käydä läpi sähköverkon ulkopuolella olevia ”off-grid” -järjestelmiä.
