--- a/tex/pumput_sahkon_kayttajina.tex
+++ b/tex/pumput_sahkon_kayttajina.tex
@@ -1,6 +1,6 @@
 Tässä kappaleessa perehdytään lämpöpumpun toimintaperiaatteeseen ja siihen miten se käyttäytyy sähkön käyttäjänä. Lämpöpumpun vaikutukset sähköverkkoon riippuvat lämpöpumpun teknisistä ratkaisuista kuten tehon mitoituksesta ja moottorin syöttötavasta. Myös verkon ominaisuudet vaikuttavat pumpun käyttöön.
 
-Lämpöpumppuja käytetään pääasiassa kiinteistöjen lämmitykseen ja viilennykseen. Muita kohteita ovat esimerkiksi teollisuus, jossa lämpöpumppujen avulla voidaan tuottaa prosessien tarpesiin lämpöä hyödyntämällä hukkalämpöä, tai kaukolämmöntuotanto. \parencite{Setala, katriVala} Lämpöpumppu saattaa olla kiinteistön ainoa lämmitysmuoto, tai se saattaa toimia toisten lämmitysjärjestelmien rinnalla. Lämpöpumpuilla voidaan korvata vanha järjestelmä, millä on vaikutusta kiinteistön lämmityksen aiheuttamaan sähkönkulutuksen luonteeseen. Esimerkiksi korvattaessa vanha öljy- tai puulämmitys lämpöpumpulla, sähkönkulutus kasvaa. Korvatessa suora sähkölämmitys lämpöpumpulla, muuttuu taas sähkön kulutuksen luonne. Lämpöpumppu käyttää saman lämmön tuottamiseen vähemmän sähköenergiaa, mutta huipputehot saattavat olla suurempia.
+Lämpöpumppuja käytetään pääasiassa kiinteistöjen lämmitykseen ja viilennykseen. Muita kohteita ovat esimerkiksi teollisuus, jossa lämpöpumppujen avulla voidaan tuottaa prosessien tarpeisiin lämpöä hyödyntämällä hukkalämpöä, tai kaukolämmöntuotanto. \parencite{Setala, katriVala} Lämpöpumppu saattaa olla kiinteistön ainoa lämmitysmuoto, tai se saattaa toimia toisten lämmitysjärjestelmien rinnalla. Lämpöpumpuilla voidaan korvata vanha järjestelmä, millä on vaikutusta kiinteistön lämmityksen aiheuttamaan sähkönkulutuksen luonteeseen. Esimerkiksi korvattaessa vanha öljy- tai puulämmitys lämpöpumpulla, sähkönkulutus kasvaa. Korvatessa suora sähkölämmitys lämpöpumpulla, muuttuu taas sähkön kulutuksen luonne. Lämpöpumppu käyttää saman lämmön tuottamiseen vähemmän sähköenergiaa, mutta huipputehot saattavat olla suurempia.
 
 \section{Lämpöpumpun toimintaperiaate}
   Lämpöpumpun eli jäähdytyskoneen toimintaperiaate on käänteinen lämpövoimakoneelle. Lämpöpumppu siirtää lämpöenergiaa viileämmästä ympäristöstä lämpimämpään. \parencite{DincerRosen}
@@ -15,7 +15,7 @@ Lämpöpumppuja käytetään pääasiassa kiinteistöjen lämmitykseen ja viilen
   \begin{equation}
       \textrm{COP} = \frac{\dot{Q}}{\dot{P}}
   \end{equation}
-  Normaali lämpöpumppujen lämpökerroin vaihtelee välillä 2--5. Lämpökerroin ja sen vaihtelu riippuvat paljolti lämmön lähteestä: maalämpöpumpuilla on yleensä korkeampi lämpökerroin kuin ilmalämpöpumpuilla. \parencite{DincerRosen} Myös haluttu lauhduttimen lämpötila vaikkuttaa lämpökertoimeen. Mitä korkeampi lämpötila lauhduttimelle halutaan sen matalampi pumpun lämpökerroin on. \parencite[kuva 7.6]{DincerRosen}
+  Normaali lämpöpumppujen lämpökerroin vaihtelee välillä 2--5. Lämpökerroin ja sen vaihtelu riippuvat paljolti lämmön lähteestä: maalämpöpumpuilla on yleensä korkeampi lämpökerroin kuin ilmalämpöpumpuilla. \parencite{DincerRosen} Myös haluttu lauhduttimen lämpötila vaikuttaa lämpökertoimeen. Mitä korkeampi lämpötila lauhduttimelle halutaan, sen matalampi pumpun lämpökerroin on. \parencite[kuva 7.6]{DincerRosen}
 
   \begin{figure}
     \centering
@@ -35,9 +35,9 @@ Lämpöpumppuja käytetään pääasiassa kiinteistöjen lämmitykseen ja viilen
 
   Mikäli oikosulkumoottorin käynnistysvirtaa ei mitenkään rajoiteta, on se tyypillisesti 6 -- 8 kertainen moottorin nimellisvirtaan nähden. Täten myös moottorin sähköverkosta käynnistyessään ottama teho on suuri. \parencite{pehmokaynnistinopas} Käynnistyksen jälkeen moottorin ottama virta ja teho laskevat kompressorin ottotehon määräämään arvoon.
 
-  Oikosulkumoottorien suuret käynnistysvirrat näkyvät tehopiikkeinä myös sähköverkon puolella. Mikäli samassa muuntopiirissä on useampia lämpöpumppuja tai alhainen jännitejäykkyys, saattavat pumput aiheuttaa jännitetason vaihteluita. Alhaisen jännitejäykkyyden omaavissa verkoissa jo lämpöpumppujen normaalit käynnistykset saattavat aihetuttaa jännitetasonvaihteluita, jotka ilmenevät esimerkiksi välkyntänä \parencite{SFSEN50160}. Sähkökatkojen jälkeen kytkettäessä jännitettä takaisin, useat lämpöpumput saattavat käynnistyä samaan aikaan lämmittämään viilentyneitä lämmityskohteitaan. Tämä saattaa aiheuttaa lyhytaikaisen jännitteen aleneman. Mikäli jännitteenaleneman jälkeinen jäännösjännite on alle \SI{90}{\percent} järjestelmän nimellisjännitteestä, kutsutaan sitä jännitekuopaksi \parencite{SFSEN50160}.
+  Oikosulkumoottorien suuret käynnistysvirrat näkyvät tehopiikkeinä myös sähköverkon puolella. Mikäli samassa muuntopiirissä on useampia lämpöpumppuja tai alhainen jännitejäykkyys, saattavat pumput aiheuttaa jännitetason vaihteluita. Alhaisen jännitejäykkyyden omaavissa verkoissa jo lämpöpumppujen normaalit käynnistykset saattavat aiheuttaa jännitetasonvaihteluita, jotka ilmenevät esimerkiksi välkyntänä \parencite{SFSEN50160}. Sähkökatkojen jälkeen kytkettäessä jännitettä takaisin, useat lämpöpumput saattavat käynnistyä samaan aikaan lämmittämään viilentyneitä lämmityskohteitaan. Tämä saattaa aiheuttaa lyhytaikaisen jännitteen aleneman. Mikäli jännitteenaleneman jälkeinen jäännösjännite on alle \SI{90}{\percent} järjestelmän nimellisjännitteestä, kutsutaan sitä jännitekuopaksi \parencite{SFSEN50160}.
 
-  Oikosulkumoottoreiden käämityksistä johtuen ne ovat induktiivista kuormaa ja täten kuluttavat loistehoa. Mikäli moottoreiden kuluttamaa loistehoa ei kompensoida tuottamalla sitä paikallisesti, näyttäytyy lämpöpumppu sähköverkkoon induktiivisena kuormana. Induktiivisen kuorman kuluttama loisteho lisää häviöitä sähköverkossa ja loistehon kompensoinnin tarvertta verkkotasolla. \parencite{pakonen} Kotitalouskäytössä olevissa lämpöpumpuissa ei esiinny erillistä loistehon kompensointia \parencite{Manner}, mikä olisi vähintään osittainen ratkaisu edelliseen ongelmaan.
+  Oikosulkumoottoreiden käämityksistä johtuen ne ovat induktiivista kuormaa ja täten kuluttavat loistehoa. Mikäli moottoreiden kuluttamaa loistehoa ei kompensoida tuottamalla sitä paikallisesti, näyttäytyy lämpöpumppu sähköverkkoon induktiivisena kuormana. Induktiivisen kuorman kuluttama loisteho lisää häviöitä sähköverkossa ja loistehon kompensoinnin tarvetta verkkotasolla. \parencite{pakonen} Kotitalouskäytössä olevissa lämpöpumpuissa ei esiinny erillistä loistehon kompensointia \parencite{Manner}, mikä olisi vähintään osittainen ratkaisu edelliseen ongelmaan.
 
 
 \section{Oikosulkumoottori pehmokäynnistimellä}
@@ -46,11 +46,11 @@ Lämpöpumppuja käytetään pääasiassa kiinteistöjen lämmitykseen ja viilen
   Pehmokäynnistimen käyttö poistaa lämpöpumppujen käynnistysvirtapiikkien aiheuttaman ongelman. Pehmokäynnistimellä ei voida kuitenkaan järkevästi vaikuttaa moottorin käydessään ottamaan tehoon tai sen tuottamaan energiamäärään.
 
 \section{Taajuusmuuttajakäytöt}
-  Nykyaikainen ratkaisu lämpöpumpujen kompressorien käyttämiseen on taajuusmuuttaja. Taajuusmuuttaja koostuu tasasuuntaajasta ja ohjatusta vaihtosuuntaajasta, jolla saadaan tuotettua halutun suuruista ja taajuista vaihtojännitettä. Käynnistettäessä kompressoria aloitetaan moottorin syöttäminen matalataajuisella vaihtojännitteellä. Moottorin käyntinopeuden noustessa kohti haluttua arvoa, nostetaan samalla jännitteen taajuutta niin, että verkosta otettu teho pysyy suurin piirtein vakiona pyörimisnopeudesta riippumatta.
+  Nykyaikainen ratkaisu lämpöpumppujen kompressorien käyttämiseen on taajuusmuuttaja. Taajuusmuuttaja koostuu tasasuuntaajasta ja ohjatusta vaihtosuuntaajasta, jolla saadaan tuotettua halutun suuruista ja taajuista vaihtojännitettä. Käynnistettäessä kompressoria aloitetaan moottorin syöttäminen matalataajuisella vaihtojännitteellä. Moottorin käyntinopeuden noustessa kohti haluttua arvoa, nostetaan samalla jännitteen taajuutta niin, että verkosta otettu teho pysyy suurin piirtein vakiona pyörimisnopeudesta riippumatta.
 
   Taajuusmuuttajan käytöllä saavutetaan useita hyötyjä. Käynnistysvirtapiikkien poistamisen lisäksi taajuusmuuttajalla voidaan myöskin säädellä kompressorin tuottamaa tehoa. Tehon säätäminen mahdollistaa pidemmät käyntijaksot ja tasaisemman tehonkulutuksen, mutta ei kuitenkaan vähennä lämpöpumpusta saatavaa maksimitehoa. Pienempien energiamäärien tuottaminen toteutetaan pienentämällä kompressorin käyntinopeutta, jolloin lämpöpumppua ei tarvitse käyttää useissa lyhyemmissä käyntijaksoissa.
 
-  Verkon näkökulmasta taajuusmuuttaja näyttäytyy eri tavoilla riippuen siitä, miten siinä on totetutettu vaihtovirran tasasuuntaus. Perinteisissä ja halvemmissa taajuusmuuttajissa tasasuuntaus on toteutettu diodisillalla. Diodisilta aiheuttaa sisääntulevan virran säröytymistä ja sitä kautta myöskin jännitehäiriöitä verkkoon. Myöskään lämpöpumpun tehokertoimen säätäminen ei onnistu. Diodisiltaa parempi ratkaisu on verkkovaihtosuuntaaja, jonka ottama virta voidaan säätää lähes sinimuotoiseksi, jolloin virtasärön syntyminen voidaan ehkäistä. Verkkovaihtosuuntaajan tehokerrointa voidaan myöskin säätää, jolloin sitä voidaan käyttää loistehotasapainon ylläpitämiseen. Mikäli lämpöpumppua syöttävä taajuusmuuttaja on säädetty niin, että se näyttäytyy verkkoon lähes resistiivisenä kuormana se osaltaan vähentää verkon kuormitusta ja laskee jännitehäviöitä. Taajuusmuuttajan verkkoon aiheuttamat jännitehäiriöt riippuvat paljon taajuusmuuttajasta, sen laadusta ja koosta. \parencite{koskenjoki}
+  Verkon näkökulmasta taajuusmuuttaja näyttäytyy eri tavoilla riippuen siitä, miten siinä on toteutettu vaihtovirran tasasuuntaus. Perinteisissä ja halvemmissa taajuusmuuttajissa tasasuuntaus on toteutettu diodisillalla. Diodisilta aiheuttaa sisääntulevan virran säröytymistä ja sitä kautta myöskin jännitehäiriöitä verkkoon. Myöskään lämpöpumpun tehokertoimen säätäminen ei onnistu. Diodisiltaa parempi ratkaisu on verkkovaihtosuuntaaja, jonka ottama virta voidaan säätää lähes sinimuotoiseksi, jolloin virtasärön syntyminen voidaan ehkäistä. Verkkovaihtosuuntaajan tehokerrointa voidaan myöskin säätää, jolloin sitä voidaan käyttää loistehotasapainon ylläpitämiseen. Mikäli lämpöpumppua syöttävä taajuusmuuttaja on säädetty niin, että se näyttäytyy verkkoon lähes resistiivisenä kuormana se osaltaan vähentää verkon kuormitusta ja laskee jännitehäviöitä. Taajuusmuuttajan verkkoon aiheuttamat jännitehäiriöt riippuvat paljon taajuusmuuttajasta, sen laadusta ja koosta. \parencite{koskenjoki}
 
 \section{Resistiivinen kuorma}
   Moottorikuormien lisäksi lämpöpumppujen yhteyteen asennetaan usein lämpövastuksia. Mikäli kyseessä on osatehomitoitettu lämpöpumppu, vastuksia käytetään suurimman energiatarpeen aikana, jolloin lämpöpumppu itsessään ei kykene tuottamaan kaikkea tarvittavaa energiaa. Lämpövastuksia käytetään myöskin höyrystimeen kertyneen jään ja huurteen poistoon.
