--- a/tex/rajapinnat.tex
+++ b/tex/rajapinnat.tex
@@ -144,7 +144,7 @@ Kaikkein matalimman abstraktiotason rajapintoja eli fyysisiä liitäntöjä tai 
 
   Vuonna 2013 IEEE julkaisi dokumentin, joka auttaa verkonhaltijoita kommunikoimaan hajautetun energiantuotannon kanssa. Tämä dokumentti kuvaa standardoidun rajapinnan datalle ja joukon protokollapalveluita ja profiileja. Dokumentin kuvaamien profiilien tarkoitus on helpottaa hajautetun energiantuotannon liittämistä DNP3 järjestelmiin. Vuonna 2018 dokumenttia päivitettiin siten, että se lisäksi sisältää toiminnallisten ominaisuuden määrittelyt protokollalle, sekä linkityksen IEC-61850-7-420 tietomallin kanssa. Näiden uudistusten myötä DNP3 protokollaa voidaan käyttää älyinverttereiden ohjaukseen samalla tavalla kuin SunSpeciä tai IEC 61850-standardia, mutta myös käyttää näitä kolmea protokollaa rinnakkain toistensa kanssa. \parencite{DNP3Inv, DNP3AppNote}
 
-  Vaikka DNP3 on standardoitu myös ohjaamaan aurinkoinverttereitä, valmistajat eivät ole ottaneet sitä käyttöön, ainakaan vielä. Sen toiminta on varmistettu tutkimuksissa, joissa on tehty testilaitteisto eri ohjaustoimintojen varmistamiseksi, mutta kaupallisista inverttereistä ei ole löytynyt mainintaa DNP3:n käytöstä. \parencite{DNP3inv}
+  Vaikka DNP3 on standardoitu myös ohjaamaan aurinkoinverttereitä, valmistajat eivät ole ottaneet sitä käyttöön, ainakaan vielä. Sen toiminta on varmistettu tutkimuksissa, joissa on tehty testilaitteisto eri ohjaustoimintojen varmistamiseksi, mutta kaupallisista inverttereistä ei ole löytynyt mainintaa DNP3:n käytöstä. \parencite{DNP3Inv}
 
 
 \section{Smart Grid -ready}
