Pistin oman tiivistelmäni paraatipaikalle, hähä.

--- a/main.tex
+++ b/main.tex
@@ -130,7 +130,7 @@
 \programmename{Tieto- ja sähkötekniikan TkK-tutkinto-ohjelma - Sähkötekniikka}
 
 \keywords%
-    {}
+    {Aurinkosähkö, lämpöpumppu, rajapinta, Modbus, SunSpec, SG-Ready, kysyntäjousto, etäohjaus, aggregointi}
 
 \maketitle
 
